# pterasim-mcp

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/pterasim_mcp/: __init__.py  __main__.py  core.py  fastapi_app.py  models.py  pterasoftware_adapter.py  tool.py
src/pterasim_mcp.egg-info/: PKG-INFO
tests/: test_cli.py  test_core.py  test_fastapi.py
